[css-anchor-position-1] anchor-name mutation doesn't propagate to its anchor-positioned dependency rdar://152727401 https://bugs.webkit.org/show_bug.cgi?id=294129

Reviewed by NOBODY (OOPS!).

The current code isn't reactive to changes in anchor names. More
specifically, if an anchorpos depends on an anchor name, and there
have been changes to the name (e.g: a new anchor with that name
appears, or an existing anchor with that name disappears), we
won't rerun anchor matching on the anchorpos. This manifests as
bugs where the anchorpos doesn't get updated when the anchor
name it uses changes.

Fixing this requires tracking which anchors are available, and which
anchor name are "dirty" (meaning it has been changed since the last
matching run). This logic is implemented in the new AnchorTracker
class, which replaces the old way of tracking anchors in a hash set.
Anchor (un)registration is now done through AnchorTracker.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-name-mutation-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-name-mutation.html: Added.
* Source/WebCore/Headers.cmake:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::styleWillChange):
    - Explicitly specify the list of anchor names to register. This info
      is in the new style, which is not yet updated into the renderer.

* Source/WebCore/rendering/RenderView.cpp:
(WebCore::RenderView::registerAnchor):
    - Use AnchorTracker to register anchor.

(WebCore::RenderView::unregisterAnchor):
    - Use AnchorTracker to unregister anchor.

* Source/WebCore/rendering/RenderView.h:
    - Replace the hash set of anchors with AnchorTracker.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::findLastAcceptableAnchorWithName):
    - Replace the anchor name => anchor map with AnchorTracker.

(WebCore::Style::AnchorPositionEvaluator::findAnchorsForAnchorPositionedElement):
    - Replace the anchor name => anchor map with AnchorTracker.
    - If an anchor couldn't be found for the given anchor name, still saves
      it into the returned map with a nullptr element. This allows tracking
      of all anchor names that the anchorpos depends on, not just the one
      that can be resolved.

(WebCore::Style::AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayout):
    - Invalidate an anchorpos if it depends on a dirty anchor name.
      Also move it back to FindAnchor stage to force re-resolving anchors.

(WebCore::Style::AnchorPositionEvaluator::updateSnapshottedScrollOffsets):
    - Because anchorPositionedToAnchorMap can contain a mapping from an anchorpos
      to a nullptr anchor (see WebCore::Style::AnchorPositionEvaluator::findAnchorsForAnchorPositionedElement),
      filter out all nullptr anchor to find non-nullptr anchor for scroll adjustment.

(WebCore::Style::collectAnchorsForAnchorName): Deleted.
    - AnchorTracker supports querying which anchor has the anchor name,
      hence there's no need to generate this map anymore, as its clients
      can directly use AnchorTracker.

(WebCore::Style::AnchorPositionEvaluator::makeAnchorPositionedForAnchorMap): Deleted.
    - Not needed anymore, Scope::invalidateForAnchorDependencies now loops
      through anchorPositionedToAnchorMap instead.

* Source/WebCore/style/AnchorPositionEvaluator.h:
    - Remove AnchorsForAnchorName type, not needed anymore since
      WebCore::Style::collectAnchorsForAnchorName is removed.
    - Remove AnchorToAnchorPositionedMap type, not needed anymore
      since Scope::invalidateForAnchorDependencies now loops through
      anchorPositionedToAnchorMap instead.

* Source/WebCore/style/AnchorTracker.cpp: Added.
(WebCore::Style::AnchorSet::registerAnchor):
(WebCore::Style::AnchorSet::unregisterAnchor):
(WebCore::Style::AnchorTracker::registerAnchor):
(WebCore::Style::AnchorTracker::unregisterAnchor):
(WebCore::Style::AnchorTracker::markAsClean):
(WebCore::Style::AnchorTracker::sortedAnchorsWithName const):
(WebCore::Style::AnchorTracker::anchorNameIsDirty const):
* Source/WebCore/style/AnchorTracker.h: Added.
(WebCore::Style::AnchorSet::markAsClean):
(WebCore::Style::AnchorSet::anchors const):
(WebCore::Style::AnchorSet::isDirty const):
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::invalidateForAnchorDependencies):
    - Loop through anchorPositionedToAnchorMap instead of the
      anchor => anchor positioned map.

* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::updateAnchorPositioningState):